# fructose

./: .clang-format  .gitignore  CMakeLists.txt  README.md
source/: main.cpp  timer.cpp  timer.hpp
